--- a/001.HTML학습/06.CGV_PJ/003.구현소스/index.html
+++ b/001.HTML학습/06.CGV_PJ/003.구현소스/index.html
@@ -1,81 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CGV에 오신 것을 환영합니다!</title>
-    <link rel="stylesheet" href="./css/main.css">
-    <!-- 자바스크립트 코드구역 -->
-    <script>
-        // JS 코드구역
-        // alert('나는 누구 여긴 어디')
-        // JS코드는 만나자마자 바로 실행됨
-        // 그래서 함수라는 코드저장소를 만들고
-        // 호출시에만 실행되도록 한다.
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>CGV에 오신 것을 환영합니다!</title>
+        <link rel="stylesheet" href="./css/main.css" />
+        <!-- 메인 JS 불러오기 - defer속성을 넣어서 html 로딩 후 실행함-->
+        <script src="./js/main.js" defer></script>
+        <!-- 자바스크립트 코드구역 -->
+        <script>
+            // JS 코드구역
+            // alert('나는 누구 여긴 어디')
+            // JS코드는 만나자마자 바로 실행됨
+            // 그래서 함수라는 코드저장소를 만들고
+            // 호출시에만 실행되도록 한다.
 
-        // JS함수 -> function 함수명(){코드}
-        function 멍멍이(먹이) ;
-            alert(먹이);
-                    document.getElementById('ifr').src='https://www.youtube.com/embed'+먹이; /* 멍멍이 함수구역 */
-    </script>
-</head>
-<body>
-    <!-- 1. 상단영역 -->
-    <header class="top-area part">
-        <!-- 1-1. 타이틀 -->
-        <h1 class="tit">CGV 예고편 상영관</h1>
-
-    </header>
-    <!-- 2. 메인영역 -->
-    <main class="main-area part">
-        <!-- 2-1. 스크린 -->
-        <div class="screen">
-            <!-- 유튜브 아이프레임 -->
-            <iframe id="ifr" src="https://www.youtube.com/embed/vteD1f-SV5I?autoplay=1&mute=1&loop=1&playlist=vteD1f-SV5I" allow="autoplay;"></iframe>  <!-- autoplay=1 : 자동재생, mute=1 : 음소거-->
-        </div>
-        <!-- 2-2. 포스터 메뉴 -->
-        <nav class="poster-menu">
-            <ul>
-                <li>
-
-                        <!-- onclick : javascript의 공간. alert : 알림창 -->
-                        
-                        <img src="./images/m1.jpg" alt="시민덕희">
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        oneclick="멍멍이('시민덕희')>"
-
-                        <img src="./images/m2.jpg" alt="웡카">
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="./images/m3.jpg" alt="소풍">
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="./images/m4.jpg" alt="건국전쟁">
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="./images/m5.jpg" alt="이프 온리">
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img src="./images/m6.jpg" alt="브레드이발소">
-                    </a>
-                </li>
-            </ul>
-        </nav>
-    </main>
-    <!-- 3. 하단영역 -->
-    <footer class="footer-area part">
-
-    </footer>
-</body>
+            // JS함수 -> function 함수명(){코드}
+            // function 멍멍이(먹이) ;
+            //     alert(먹이);
+            //             document.getElementById('ifr').src='https://www.youtube.com/embed'+먹이; /* 멍멍이 함수구역 */
+        </script>
+    </head>
+    <body>
+        <!-- 1. 상단영역 -->
+        <header class="top-area part">
+            <!-- 1-1. 타이틀 -->
+            <h1 class="tit">CGV 예고편 상영관</h1>
+        </header>
+        <!-- 2. 메인영역 -->
+        <main class="main-area part">
+            <!-- 2-1. 스크린 -->
+            <div class="screen">
+                <!-- 유튜브 아이프레임 -->
+                <iframe
+                    id="ifr"
+                    src="https://www.youtube.com/embed/vteD1f-SV5I?autoplay=1&mute=1&loop=1&playlist=vteD1f-SV5I"
+                    allow="autoplay;"
+                ></iframe>
+                <!-- autoplay=1 : 자동재생, mute=1 : 음소거-->
+            </div>
+            <!-- 2-2. 포스터 메뉴 -->
+            <nav class="poster-menu">
+                <ul>
+                    <li>
+                        <a href="#">
+                            <!-- onclick : javascript의 공간. alert : 알림창 -->
+                            <img src="./images/m1.jpg" alt="시민덕희" />
+                            <!-- 영화정보박스 -->
+                            <div class="mv-info">
+                                <ol>
+                                    <li>시민덕희</li>
+                                    <li>라미란, 공명</li>
+                                    <li>드라마</li>
+                                </ol>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="./images/m2.jpg" alt="웡카" />
+                            <!-- 영화정보박스 -->
+                            <div class="mv-info">
+                                <ol>
+                                    <li>웡카</li>
+                                    <li>티모시 샬라메</li>
+                                    <li>판타지, 드라마</li>
+                                </ol>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="./images/m3.jpg" alt="소풍" />
+                            <!-- 영화정보박스 -->
+                            <div class="mv-info">
+                                <ol>
+                                    <li>소풍</li>
+                                    <li>나문희, 김영옥</li>
+                                    <li>드라마</li>
+                                </ol>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="./images/m4.jpg" alt="건국전쟁" />
+                            <!-- 영화정보박스 -->
+                            <div class="mv-info">
+                                <ol>
+                                    <li>건국전쟁</li>
+                                    <li>감독 김덕영</li>
+                                    <li>다큐멘터리</li>
+                                </ol>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="./images/m5.jpg" alt="이프 온리" />
+                            <!-- 영화정보박스 -->
+                            <div class="mv-info">
+                                <ol>
+                                    <li>이프온리</li>
+                                    <li>제니퍼 러브 휴잇</li>
+                                    <li>멜로/로맨스</li>
+                                </ol>
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="./images/m6.jpg" alt="브레드이발소" />
+                            <!-- 영화정보박스 -->
+                            <div class="mv-info">
+                                <ol>
+                                    <li>브레드이발소</li>
+                                    <li>브레드 피트</li>
+                                    <li>애니메이션</li>
+                                </ol>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </main>
+        <!-- 3. 하단영역 -->
+        <footer class="footer-area part"></footer>
+    </body>
 </html>
